@@ -17,3 +17,14 @@ def test_compound():
     assert y.can_load()
     assert y.result == x.result
 
+
+@task_reset
+def test_w_barrier():
+    from jug.options import default_options
+    store, space = jug.jug.init('jug/tests/jugfiles/compound_wbarrier.py', 'dict_store')
+    jug.jug.execute(store, default_options)
+    store, space = jug.jug.init('jug/tests/jugfiles/compound_wbarrier.py', store)
+    jug.jug.execute(store, default_options)
+    assert 'sixteen' in space
+    assert space['sixteen'].result == 16
+
